# brokenspoke-analyzer

./: .buildinfo  .dockerignore  .gitignore  .markdownlint.yml  .pylintrc  CHANGELOG.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.html  Dockerfile  LICENSE  README.html  README.md  about.html  caching.html  code-of-conduct.html  commands.html  compose.yml  datasets.html  genindex.html  index.html  justfile  objects.inv  py-modindex.html  pyproject.toml  regions.html  requirements.txt  resources.html  search.html  searchindex.js  setup.cfg  shapefile-data-dictionary.html  usage.html  workflow.html
.devcontainer/: Dockerfile  devcontainer.json  postAttach.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labels.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  help_request.yml
.github/workflows/: ci.yaml  docs.yaml  e2e.yaml  prerelease.yaml  release.yaml
_images/: graphviz-e499d0cf9f7c49ba2186c3f4e002ab690bdc0adf.png.map
_sources/: CHANGELOG.md.txt  CONTRIBUTING.md.txt  README.md.txt  code-of-conduct.md.txt  commands.md.txt  datasets.rst.txt  index.rst.txt  resources.rst.txt  usage.md.txt  usage.rst.txt  workflow.md.txt
_sources/api/: brokenspoke_analyzer.core.analysis.rst.txt  brokenspoke_analyzer.core.database.rst.txt  brokenspoke_analyzer.core.downloader.rst.txt  brokenspoke_analyzer.core.rst.txt  brokenspoke_analyzer.core.runner.rst.txt  brokenspoke_analyzer.rst.txt
_static/: documentation_options.js
api/: brokenspoke_analyzer.core.analysis.html  brokenspoke_analyzer.core.compute.html  brokenspoke_analyzer.core.database.dbcore.html  brokenspoke_analyzer.core.database.html  brokenspoke_analyzer.core.downloader.html  brokenspoke_analyzer.core.exporter.html  brokenspoke_analyzer.core.html  brokenspoke_analyzer.core.ingestor.html  brokenspoke_analyzer.core.runner.html  brokenspoke_analyzer.core.utils.html  brokenspoke_analyzer.html
brokenspoke_analyzer/: __init__.py  cli.py  cli_.py  main.py
brokenspoke_analyzer/cli/: __init__.py  cache.py  common.py  compute.py  configure.py  export.py  importer.py  prepare.py  root.py  run.py  run_with.py
brokenspoke_analyzer/core/: __init__.py  aiohttphelper.py  analysis.py  compute.py  constant.py  datasource.py  datastore.py  downloader.py  exporter.py  file_utils.py  ingestor.py  processhelper.py  runner.py  srid.py  utils.py
brokenspoke_analyzer/core/database/: __init__.py  dbcore.py  models.py
brokenspoke_analyzer/database/: dbcore.py
brokenspoke_analyzer/pyrosm/data/: __init__.py  bbbike.py  geofabrik.py
brokenspoke_analyzer/pyrosm/utils/: download.py
brokenspoke_analyzer/scripts/: pfb.style
brokenspoke_analyzer/scripts/sql/: clip_osm.sql  prepare_tables.sql  speed_tables.sql
brokenspoke_analyzer/scripts/sql/connectivity/: access_colleges.sql  access_community_centers.sql  access_dentists.sql  access_doctors.sql  access_hospitals.sql  access_jobs.sql  access_overall.sql  access_parks.sql  access_pharmacies.sql  access_population.sql  access_retail.sql  access_schools.sql  access_social_services.sql  access_supermarkets.sql  access_trails.sql  access_transit.sql  access_universities.sql  block_verts.sql  build_network.sql  category_scores.sql  census_block_jobs.sql  census_blocks.sql  connected_census_blocks.sql  connected_census_blocks_calc.sql  connected_census_blocks_prep.sql  overall_scores.sql  reachable_roads_high_stress_calc.sql  reachable_roads_high_stress_cleanup.sql  reachable_roads_high_stress_prep.sql  reachable_roads_low_stress_calc.sql  reachable_roads_low_stress_cleanup.sql  reachable_roads_low_stress_prep.sql  score_inputs.sql
brokenspoke_analyzer/scripts/sql/features/: bike_infra.sql  calculate_mileage.sql  class_adjustments.sql  functional_class.sql  island.sql  lanes.sql  legs.sql  one_way.sql  park.sql  paths.sql  rrfb.sql  signalized.sql  speed_limit.sql  stops.sql  width_ft.sql
brokenspoke_analyzer/scripts/sql/stress/: stress_lesser_ints.sql  stress_link_ints.sql  stress_living_street.sql  stress_motorway-trunk.sql  stress_motorway-trunk_ints.sql  stress_one_way_reset.sql  stress_path.sql  stress_primary_ints.sql  stress_secondary_ints.sql  stress_segments_higher_order.sql  stress_segments_lower_order.sql  stress_track.sql  (+3 more)
compose/: Dockerfile
compose/compose-config/: servers.json
compose/pgAdmin/: compose-pgadmin.yml
compose/pgAdmin/config/: pgpass  servers.json
docs/source/: about.md  caching.md  code-of-conduct.md  commands.md  conf.py  howto-placeholder.md  index.rst  pfb-network-connectivity.rst  regions.rst  resources.rst  shapefile-data-dictionary.md  usage.md  usage.rst
docs/source/api/: brokenspoke_analyzer.core.compute.rst  brokenspoke_analyzer.core.database.dbcore.rst  brokenspoke_analyzer.core.exporter.rst  brokenspoke_analyzer.core.ingestor.rst  brokenspoke_analyzer.core.rst  brokenspoke_analyzer.core.srid.rst  brokenspoke_analyzer.core.utils.rst  brokenspoke_analyzer.rst
docs/source/how-to/: analyze-bike-infrastructure.md  analyzing-bike-infrastructure.md  custom-input-files.md
examples/: us-cities.py
how-to/: analyze-bike-infrastructure.html  custom-input-files.html
integration/: README.j2  README.md  db.py  e2e-cities-M.csv  e2e-cities-S.csv  e2e-cities-XL.csv  e2e-cities-XS.csv  e2e-cities-XXL.csv  e2e-cities.csv  e2e-cities.json  e2e.md  e2e.py  e2e_compare.py  ingestor.py  x.py
scripts/sql/: create_us_water_blocks_table.sql
scripts/sql/connectivity/: reachable_roads_high_stress_cleanup.sql
scripts/sql/features/: bike_infra.sql
scripts/sql/stress/: stress_segments_higher_order.sql
specs/: README.md
specs/0000-cache-yanked/: design.md  requirements.md  tasks.md  yanked.md
specs/0001-cache-warmer-s3/: design.md  requirements.md  tasks.md
specs/xxxx-feature-templates/: design.md  requirements.md  tasks.md
tests/: test_brokenspoke_analyzer.py  test_cache_warmer.py
tests/brokenspoke_analyzer/core/: test_analysis.py  test_exporter.py
utils/: aws-r2-sync.py  bna-batch-pbl.py  bna-batch.py  bna-wrapper.py  cache-warmer.py  pbl_calculation.py
(+15 files in other folders)
