[project]
name = "brokenspoke-analyzer"
version = "2.6.5"
description = "Run a BNA analysis locally."
authors = [
  { name = "Rémy Greinhofer", email = "remy.greinhofer@gmail.com" },
  { name = "Luis Alvergue", email = "lalver1@gmail.com" },
  { name = "Grace Stonecipher", email = "grace@peopleforbikes.org" },
]
requires-python = "~=3.13.0"
license = "MIT"
dependencies = [
  "aiohttp>=3.12.15,<4",
  "beautifulsoup4>=4.13.4",
  "boto3>=1.40.76,<2",
  "geopandas>=1.1.1,<2",
  "loguru>=0.7.3,<0.8",
  "obstore>=0.8.2",
  "osmnx>=2.0.6,<3",
  "platformdirs>=4.5.0",
  "pygris>=0.2.0",
  "python-dotenv>=1.2.1,<2",
  "python-slugify>=8.0.4,<9",
  "rich>=14.2.0,<15",
  "sqlalchemy[asyncio, postgresql_psycopg]>=2.0.44,<3",
  "tenacity>=9.1.2,<10",
  "typer>=0.20.0,<0.22",
  "us>=3.2.0,<4",
]

[project.scripts]
bna = "brokenspoke_analyzer.cli.root:app"

[dependency-groups]
dev = [
  "bpython>=0.26,<0.27",
  "furo>=2025.9.25,<2026",
  "isort>=7.0.0,<8",
  "jupyterlab>=4.5.0,<5",
  "mypy>=1.18.2,<2",
  "myst-parser>=4.0.1,<5",
  "pytest>=9.0.1,<10",
  "pytest-cov>=7.0.0,<8",
  "pytest-mock>=3.15.1,<4",
  "pytest-rerunfailures~=16.1",
  "pytest-socket>=0.7.0,<0.8",
  "pytest-xdist>=3.8.0,<4",
  "ruff>=0.14.5",
  "Sphinx>=8.1.3,<10",
  "sphinx-autobuild>=2025.8.25,<2026",
  "sphinx-autodoc-typehints>=3.5.2,<4",
  "sphinx-copybutton>=0.5.2,<0.6",
  "sqlfluff>=3.5.0,<5",
  "types-colorama>=0.4.15.20250801,<0.5",
  "types-decorator>=5.2.0.20251101,<6",
  "types-jsonschema>=4.25.1.20251009,<5",
  "types-pygments>=2.19.0.20250809,<3",
  "types-python-slugify>=8.0.2.20240310,<9",
  "types-six>=1.17.0.20251009,<2",
  "xdoctest>=1.3.0,<2",
  "pandas-stubs>=2.3.2.250926,<3",
  "types-beautifulsoup4>=4.12.0.20250516",
  "minijinja>=2.13.0",
]

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.coverage.run]
omit = [
  "*/__init__.py",
  "brokenspoke_analyzer/cli_.py",
  "brokenspoke_analyzer/cli/*",
  "brokenspoke_analyzer/core/constant.py",
  "brokenspoke_analyzer/core/database/*",
  "brokenspoke_analyzer/core/downloader.py",
  "brokenspoke_analyzer/core/ingestor.py",
  "brokenspoke_analyzer/core/compute.py",
  "brokenspoke_analyzer/main.py",
  "brokenspoke_analyzer/pyrosm/*",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-p no:warnings --cov-report term-missing --cov-report html --xdoctest"
markers = [
  "australia",
  "canada",
  "europe",
  "france",
  "spain",
  "usa",
  "main: main test suite",
  "xs: runs under 5min",
  "s: runs under 15min",
  "m: runs under 60min (1h)",
  "l: runs under 180min (2h)",
  "xl: runs under 360min (6h)",
  "xxl: runs under 720min (12h / 1/2day)",
]

[tool.ruff]
extend-exclude = ["brokenspoke_analyzer/pyrosm"]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
  "brokenspoke_analyzer.pyrosm.*",
  "boto3",
  "geopandas",
  "osmnx",
  "shapely",
  "us",
]
ignore_errors = true
ignore_missing_imports = true

[tool.sqlfluff.core]
dialect = "postgres"
exclude_rules = "RF01"
large_file_skip_byte_limit = 0
processes = 0
templater = "placeholder"

[tool.sqlfluff.templater.placeholder]
param_style = "colon"
block_road_buffer = 15
block_road_min_length = 30
city_default = 30
class = "primary"
core_services = 99
default_facility_width = 5
default_lanes = 2
default_parking = 1
default_parking_width = 8
default_roadway_width = 27
default_speed = 40
nb_boundary_buffer = 2680
nb_output_srid = 32613
opportunity = 99
people = 99
primary_lanes = 2
primary_speed = 40
recreation = 99
retail = 99
secondary_lanes = 2
secondary_speed = 40
state_default = 35
tertiary_lanes = 1
tertiary_speed = 30
total = 99
transit = 99

[tool.sqlfluff.rules.capitalisation.functions]
ignore_words_regex = "ST_."

[tool.sqlfluff.rules.layout.long_lines]
ignore_comment_lines = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
