[project]
name = "brokenspoke-analyzer"
version = "3.1.1"
description = "Run a BNA analysis locally."
authors = [
  { name = "Rémy Greinhofer", email = "remy.greinhofer@gmail.com" },
  { name = "Luis Alvergue", email = "lalver1@gmail.com" },
  { name = "Grace Stonecipher", email = "grace@peopleforbikes.org" },
]
requires-python = "~=3.13.0"
license = "MIT"
dependencies = [
  "aiohttp>=3.14.1,<4",
  "beautifulsoup4>=4.15.0",
  "boto3>=1.43.34,<2",
  "geopandas>=1.1.3,<2",
  "loguru>=0.7.3,<0.8",
  "numpy>=2.4.6",
  "obstore>=0.10.1",
  "osmnx>=2.1.0,<3",
  "platformdirs>=4.10.0",
  "pygris>=0.2.1",
  "pyrosm>=0.11.0",
  "python-dotenv>=1.2.2,<2",
  "python-slugify>=8.0.4,<9",
  "rasterio>=1.5.0",
  "rich>=15.0.0,<16",
  "shapely>=2.1.2",
  "sqlalchemy[asyncio, postgresql_psycopg]>=2.0.51,<3",
  "tenacity>=9.1.4,<10",
  "trio>=0.33.0",
  "typer>=0.26.7,<0.27",
  "us>=3.2.0,<4",
  "yarl>=1.24.2",
]

[project.scripts]
bna = "brokenspoke_analyzer.cli.root:app"

[dependency-groups]
dev = [
  "bpython>=0.26,<0.27",
  "furo>=2025.12.19,<2026",
  "isort>=8.0.1,<9",
  "jupyterlab>=4.6.0,<5",
  "minijinja>=2.21.0",
  "myst-parser>=5.1.0,<6",
  "pandas-stubs>=3.0.3.260530,<4",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0,<8",
  "pytest-mock>=3.15.1,<4",
  "pytest-rerunfailures~=16.3",
  "pytest-socket>=0.8.0,<0.9",
  "pytest-xdist>=3.8.0,<4",
  "pytest>=9.1.1,<10",
  "ruff>=0.15.18",
  "sphinx-autobuild>=2025.8.25,<2026",
  "sphinx-autodoc-typehints>=3.11.0,<4",
  "sphinx-copybutton>=0.5.2,<0.6",
  "Sphinx>=9.1.0,<10",
  "sqlfluff>=4.2.2,<5",
  "ty>=0.0.51",
  "types-beautifulsoup4>=4.12.0.20250516",
  "types-boto3>=1.43.34",
  "types-colorama>=0.4.15.20260508,<0.5",
  "types-decorator>=5.2.0.20260519,<6",
  "types-jsonschema>=4.26.0.20260518,<5",
  "types-pygments>=2.20.0.20260518,<3",
  "types-python-slugify>=8.0.2.20240310,<9",
  "types-six>=1.17.0.20260518,<2",
  "xdoctest>=1.3.2,<2",
]

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.coverage.run]
omit = [
  "*/__init__.py",
  "brokenspoke_analyzer/cli_.py",
  "brokenspoke_analyzer/cli/*",
  "brokenspoke_analyzer/core/constant.py",
  "brokenspoke_analyzer/core/database/*",
  "brokenspoke_analyzer/core/downloader.py",
  "brokenspoke_analyzer/core/ingestor.py",
  "brokenspoke_analyzer/core/compute.py",
  "brokenspoke_analyzer/main.py",
  "brokenspoke_analyzer/pyrosm/*",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-p no:warnings --cov-report term-missing --cov-report html --xdoctest"
markers = [
  "australia",
  "canada",
  "europe",
  "france",
  "spain",
  "usa",
  "main: main test suite",
  "xs: runs under 5min",
  "s: runs under 15min",
  "m: runs under 60min (1h)",
  "l: runs under 180min (2h)",
  "xl: runs under 360min (6h)",
  "xxl: runs under 720min (12h / 1/2day)",
]

[tool.ruff]
extend-exclude = ["brokenspoke_analyzer/pyrosm"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",  # any-type
  "COM812",  # missing-trailing-comma
  "EM101",   # raw-string-in-exception
  "EM102",   # f-string-in-exception
  "FIX",     # flake8-fixme
  "INP001",  # implicit-namespace-package
  "PLR0913", # too-many-arguments
  "S603",    # subprocess-without-shell-equals-true
  "S607",    # start-process-with-partial-path
  "S608",    # hardcoded-sql-expression
  "SLF001",  # private-member-access
  "TD003",   # missing-todo-link
  "TRY003",  # raise-vanilla-args
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
  "brokenspoke_analyzer.pyrosm.*",
  "boto3",
  "geopandas",
  "osmnx",
  "shapely",
  "us",
]
ignore_errors = true
ignore_missing_imports = true

[tool.sqlfluff.core]
dialect = "postgres"
exclude_rules = "RF01, PG01"
large_file_skip_byte_limit = 0
processes = 0
templater = "placeholder"

[tool.sqlfluff.templater.placeholder]
param_style = "colon"
block_road_buffer = 15
block_road_min_length = 30
city_default = 30
class = "primary"
cluster_tolerance = 50
core_services = 99
default_facility_width = 5
default_lanes = 2
default_parking = 1
default_parking_width = 8
default_roadway_width = 27
default_speed = 40
nb_boundary_buffer = 2680
nb_max_trip_distance = 2680
nb_output_srid = 32613
opportunity = 99
people = 99
primary_lanes = 2
primary_speed = 40
recreation = 99
retail = 99
secondary_lanes = 2
secondary_speed = 40
state_default = 35
thread_no = 0
thread_num = 1
tertiary_lanes = 1
tertiary_speed = 30
total = 99
transit = 99

[tool.sqlfluff.rules.capitalisation.functions]
ignore_words_regex = "ST_."

[tool.sqlfluff.rules.layout.long_lines]
ignore_comment_lines = true

[tool.ty.src]
exclude = [
  "brokenspoke_analyzer/pyrosm/**",
  "boto3",
  "geopandas",
  "osmnx",
  "shapely",
  "us",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
